language/move-lang/tests/move_check/parser/expr_unary_negation.exp
error: 

   ┌── tests/move_check/parser/expr_unary_negation.move:6:31 ───
   │
 6 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                               ^ Unexpected '-'
   ·
 6 │     Transaction::assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
   │                               - Expected an expression term
   │

